--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <a 
             class="button"
-            href="https://TON_LIEN_NOTION_OU_VIDEO_ICI"
+            href="https://tally.so/r/mZB1Za"
             target="_blank"
         >
             Découvrir
